# ProfileCore

./: .buildignore  .gitattributes  .gitignore  .shellcheckrc  CHANGELOG.md  CLEANUP_SUMMARY.md  Cargo.toml  IMPLEMENTATION_COMPLETE.md  INSTALL.md  INSTALLATION_IMPROVEMENTS_SUMMARY.md  LICENSE  Microsoft.PowerShell_profile.ps1  POLISH_COMPLETE.md  README.md  RELEASE_NOTES_v1.0.0.md
.cursor/plans/: profilecore-restructure---optimization-c29ead95.plan.md
.github/: Github_config.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: README.md  build-release.yml  ci.yml  rust-build.yml  test.yml
config/: analyzer-settings.psd1
docs/: MIGRATION_V1.0.0.md  README.md  RELEASE_V1.0.0-ALPHA.md  V1.0.0_IMPLEMENTATION_SUMMARY.md  releases
docs/architecture/: architecture-review.md  global-variables.md  project-status.md  rust-performance-impact.md  shared-libraries.md  v6-DI-STATUS.md
docs/archive/: CACHING_IMPLEMENTATION_STATUS.md  CODEBASE_OPTIMIZATION_PLAN.md  CODEBASE_OPTIMIZATION_REVIEW.md  COMPLETE_REPOSITORY_STATUS.md  DIRECTORY_ORGANIZATION.md  FINAL_OPTIMIZATION_REPORT.md  IMPROVEMENTS_COMPLETED.md  INSTALLATION_COMPLETE_SUMMARY.md  NEXT_STEPS.md  OPTIMIZATION_SESSION_SUMMARY.md  OPTIMIZATION_SUMMARY.md  OPTIONAL_CACHING_COMPLETE.md  PERFORMANCE_OPTIMIZATION_COMPLETE.md  PHASE1_BASELINE_REPORT.md  PHASE2_COMPLETE.md  PHASE2_FAST_TRACK_COMPLETE.md  PHASE2_PROGRESS_REPORT.md  PHASE2_SESSION_COMPLETE.md  PHASE3_COMPLETE.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE3_LOAD_PROFILE.json  PHASE3_OPTIMIZATION_PIVOT.md  PHASE3_PROFILING_ANALYSIS.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_OPTIMIZATION_MASTER_PLAN.md  PSGALLERY_PUBLICATION_COMPLETE.md  README.md  RELEASE_PREPARATION_COMPLETE.md  REPOSITORY_REORGANIZATION_COMPLETE.md  UNINSTALL_FEATURES.md  installation-improvements.md  installer-optimization.md  journey-to-v4.md  performance-optimization.md
docs/developer/: AUTO_PATH_CONFIGURATION.md  CERTIFICATE_STORE_GUIDE.md  CODE_SIGNING_AND_ANTIVIRUS.md  INSTALLATION_IMPROVEMENTS.md  INSTALL_RESTRUCTURE_OPTIMIZATION.md  INTERACTIVE_INSTALLER_UPGRADE.md  OUTPUT_REFACTORING_SUMMARY.md  PSGALLERY_PUBLICATION_SUMMARY.md  PSGALLERY_REQUIREMENTS.md  PUBLISH_TO_PSGALLERY.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v5.1.0.md  RUST_CLI_IMPLEMENTATION_COMPLETE.md  RUST_CLI_UX_COMPLETE.md  RUST_FULL_CONVERSION_SUMMARY.md  RUST_INTEGRATION_GUIDE.md  RUST_LIBRARIES_COMPLETE.md  RUST_OPTIMIZATION_PROGRESS.md  RUST_OUTPUT_GUIDE.md  RUST_OUTPUT_IMPLEMENTATION.md  SHARED_LIBRARIES_RUST.md  UTILITY_FUNCTIONS_ADDED.md  V6_COMPLETE_SUMMARY.md  V6_MIGRATION_GUIDE.md  architecture-principles.md  build-system.md  contributing.md  repository-migration.md  testing.md  v5-to-v6-migration.md
docs/planning/: ai-features-implementation.md  changelog.md  plugin-system-implementation.md  roadmap.md
docs/user-guide/: README.md  antivirus-and-rust.md  command-reference.md  installation-advanced.md  installation-troubleshooting.md  installation.md  (+10 more)
examples/: README.md
install/: install-v6.ps1  install.ps1  install.sh  uninstall.ps1  uninstall.sh
modules/: README.md
scripts/: README.md  quick-install.ps1  quick-install.sh  setup-dev-environment.ps1
shells/: README.md
src/: completions.rs  init.rs  main.rs
tests/: README.md
(+105 files in other folders)
